--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,20 @@ repositories {
 		name = "ModMaven"
 		url = "https://modmaven.dev"
 	}
+	maven {
+		name = "EngineHub"
+		url = "https://maven.enginehub.org/repo/"
+		content {
+			includeGroup "org.enginehub.worldeditcui-protocol"
+		}
+	}
+	maven {
+		name = "Modrinth"
+		url = "https://api.modrinth.com/maven"
+		content {
+			includeGroup "maven.modrinth"
+		}
+	}
 
 }
 
@@ -54,6 +68,16 @@ dependencies {
 
 	modImplementation "TechReborn:TechReborn-1.21.5:5.13.3"
 	modImplementation "RebornCore:RebornCore-1.21.5:5.13.4"
+
+	// Dev runtime client mods (not bundled into this mod jar)
+	modLocalRuntime "maven.modrinth:modmenu:C4UoE3E9"
+	modLocalRuntime "maven.modrinth:minihud:eD7jb7pB"
+	modLocalRuntime "maven.modrinth:malilib:YrRUsIk9"
+	modLocalRuntime "maven.modrinth:tweakeroo:fOZoIok9"
+	modLocalRuntime "maven.modrinth:journeymap:rV52D5m0"
+	modLocalRuntime "maven.modrinth:worldedit:242z5LFa"
+	modLocalRuntime "maven.modrinth:worldedit-cui:HurcveSL"
+	modLocalRuntime "org.enginehub.worldeditcui-protocol:worldeditcui-protocol-fabric-mc1.21.5:4.0.1"
 
 }
 
